[package]
name = "pso2-modpatcher"
version = "0.1.0-alpha.0"
authors = ["Eidolon <furyhunter600@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
ages-ice-archive = "0.3.1"
anyhow = "1"
ascii = "1"
structopt = "0.3"

[target.'cfg(windows)'.dependencies]
nwg = { version = "^1.0.12", package = "native-windows-gui", features = ["notice"] }
nwd = { version = "^1.0.3", package = "native-windows-derive" }
winapi = { version = "0.3", features = ["consoleapi", "wincon"] }
